Private npm package

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pay-no-way",
   "version": "1.0.0",
   "description": "A mobile app for testing payment systems against double-spend attacks.",
+  "private": true,
   "main": "index.js",
   "scripts": {
     "android-device": "cordova run android --device",
