--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "android-device": "cordova run android --device",
-    "browser": "npm run server",
+    "browser": "cordova run browser",
     "build": "make all",
     "electrum-proxy": "node electrum-proxy-server.js",
     "server": "./node_modules/.bin/http-server ./www -p 3000 -a localhost",
@@ -65,6 +65,7 @@
     "qrcode": "1.3.2",
     "read": "1.0.7",
     "stream-array": "1.1.2",
+    "uglify-js": "3.4.9",
     "underscore": "1.9.1"
   }
 }
