--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     ],
     "plugins": {
       "cordova-plugin-whitelist": {},
-      "phonegap-plugin-barcodescanner": {},
+      "phonegap-plugin-barcodescanner": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
       "cordova-android-support-gradle-release": {
         "ANDROID_SUPPORT_VERSION": "26.+"
       },
@@ -50,6 +52,7 @@
     "cordova-android": "7.1.4",
     "cordova-android-support-gradle-release": "2.0.1",
     "cordova-browser": "5.0.4",
+    "cordova-plugin-inappbrowser": "2.0.2",
     "cordova-plugin-whitelist": "1.3.3",
     "core-js": "2.6.0",
     "cssnano": "4.1.7",
