--- a/package.json
+++ b/package.json
@@ -6,12 +6,8 @@
   "main": "index.js",
   "scripts": {
     "android": "./node_modules/.bin/cordova run android --device",
-    "browser": "./node_modules/.bin/cordova run browser",
     "build": "make all",
-    "electrum-proxy": "node electrum-proxy-server.js",
     "prepare:android": "./node_modules/.bin/cordova platform add android",
-    "prepare:browser": "./node_modules/.bin/cordova platform add browser",
-    "server": "./node_modules/.bin/http-server ./www -p 3000 -a localhost",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "app": {
@@ -26,8 +22,7 @@
   "license": "AGPL-3.0",
   "cordova": {
     "platforms": [
-      "android",
-      "browser"
+      "android"
     ],
     "plugins": {
       "cordova-plugin-whitelist": {},
@@ -37,7 +32,8 @@
       "cordova-android-support-gradle-release": {
         "ANDROID_SUPPORT_VERSION": "26.+"
       },
-      "cordova-plugin-inappbrowser": {}
+      "cordova-plugin-inappbrowser": {},
+      "cz.blocshop.socketsforcordova": {}
     }
   },
   "dependencies": {
@@ -49,28 +45,22 @@
     "backbone.localstorage": "2.0.2",
     "bignumber.js": "8.0.1",
     "bitcoinjs-lib": "4.0.2",
-    "body-parser": "1.18.3",
     "browserify": "16.2.3",
     "cordova": "8.1.2",
     "cordova-android": "7.1.4",
     "cordova-android-support-gradle-release": "2.0.1",
-    "cordova-browser": "5.0.4",
     "cordova-plugin-inappbrowser": "2.0.2",
     "cordova-plugin-whitelist": "1.3.3",
     "core-js": "2.6.0",
     "cssnano": "4.1.7",
-    "express": "4.16.4",
     "handlebars": "4.0.12",
-    "http-proxy": "1.17.0",
-    "http-server": "0.11.1",
     "jquery": "3.3.1",
     "moment": "2.23.0",
     "open-sans-fontface": "https://github.com/samotari/open-sans/archive/1.4.2.tar.gz",
     "phonegap-plugin-barcodescanner": "8.0.1",
     "postcss-cli": "6.0.1",
     "qrcode": "1.3.2",
-    "read": "1.0.7",
-    "stream-array": "1.1.2",
+    "sockets-for-cordova": "https://github.com/chill117/sockets-for-cordova.git",
     "uglify-js": "3.4.9",
     "underscore": "1.9.1"
   }
