--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "android": "./node_modules/.bin/cordova run android --device",
+    "android-vm": "./node_modules/.bin/cordova run android",
     "build": "make all",
     "prepare:android": "./node_modules/.bin/cordova platform add android",
     "test": "echo \"Error: no test specified\" && exit 1"
