--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "android": "./node_modules/.bin/cordova run android --device",
     "android-vm": "./node_modules/.bin/cordova run android",
-    "build": "make all",
+    "build": "make clean-light all",
     "prepare:android": "./node_modules/.bin/cordova platform add android",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -30,11 +30,11 @@
       "phonegap-plugin-barcodescanner": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
+      "cordova-plugin-inappbrowser": {},
+      "cz.blocshop.socketsforcordova": {},
       "cordova-android-support-gradle-release": {
         "ANDROID_SUPPORT_VERSION": "26.+"
-      },
-      "cordova-plugin-inappbrowser": {},
-      "cz.blocshop.socketsforcordova": {}
+      }
     }
   },
   "dependencies": {
@@ -49,11 +49,11 @@
     "browserify": "16.2.3",
     "cordova": "8.1.2",
     "cordova-android": "7.1.4",
-    "cordova-android-support-gradle-release": "2.0.1",
+    "cordova-android-support-gradle-release": "3.0.0",
     "cordova-plugin-inappbrowser": "2.0.2",
     "cordova-plugin-whitelist": "1.3.3",
-    "core-js": "2.6.0",
     "cssnano": "4.1.7",
+    "cz.blocshop.socketsforcordova": "https://github.com/chill117/sockets-for-cordova.git",
     "handlebars": "4.1.2",
     "jquery": "3.4.1",
     "moment": "2.23.0",
@@ -61,7 +61,7 @@
     "phonegap-plugin-barcodescanner": "8.0.1",
     "postcss-cli": "6.0.1",
     "qrcode": "1.3.2",
-    "sockets-for-cordova": "https://github.com/chill117/sockets-for-cordova.git",
+    "sockets-for-cordova": "git+https://github.com/chill117/sockets-for-cordova.git",
     "uglify-js": "3.4.9",
     "underscore": "1.9.1"
   }
