--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
       "cz.blocshop.socketsforcordova": {},
       "cordova-android-support-gradle-release": {
         "ANDROID_SUPPORT_VERSION": "26.+"
-      }
+      },
+      "cordova-plugin-ionic-keyboard": {}
     }
   },
   "dependencies": {
@@ -55,6 +56,7 @@
     "cordova-android": "7.1.4",
     "cordova-android-support-gradle-release": "3.0.0",
     "cordova-plugin-inappbrowser": "2.0.2",
+    "cordova-plugin-ionic-keyboard": "2.1.3",
     "cordova-plugin-whitelist": "1.3.3",
     "core-js": "2.6.4",
     "cssnano": "4.1.7",
