--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
       "cordova-android-support-gradle-release": {
         "ANDROID_SUPPORT_VERSION": "26.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-network-information": {}
     }
   },
   "dependencies": {
@@ -57,6 +58,7 @@
     "cordova-android-support-gradle-release": "3.0.0",
     "cordova-plugin-inappbrowser": "2.0.2",
     "cordova-plugin-ionic-keyboard": "2.1.3",
+    "cordova-plugin-network-information": "2.0.2",
     "cordova-plugin-whitelist": "1.3.3",
     "core-js": "2.6.4",
     "cssnano": "4.1.7",
