--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "scripts": {
     "android": "./node_modules/.bin/cordova run android --device",
     "android-vm": "./node_modules/.bin/cordova run android",
+    "android-export-signing-certificate": "keytool -keystore android.keystore -alias paynoway -exportcert -rfc -file paynoway.crt",
+    "android-export-public-signing-key": "rm -rf paynoway.crt; npm run android-export-signing-certificate | openssl x509 -pubkey -noout -in paynoway.crt",
+    "android-generate-signing-key": "keytool -keystore android.keystore -genkey -v -alias paynoway -keyalg RSA -keysize 2048 -validity 10000",
     "build": "npm run build:prod",
     "build:apk": "./scripts/build-signed-apk.sh",
     "build:dev": "NODE_ENV=dev make clean-light dev",
