--- a/package.json
+++ b/package.json
@@ -48,15 +48,16 @@
     }
   },
   "dependencies": {
-    "@babel/core": "7.4.4",
-    "@babel/preset-env": "7.4.4",
-    "async": "3.1.0",
+    "@babel/core": "7.6.0",
+    "@babel/polyfill": "7.6.0",
+    "@babel/preset-env": "7.6.0",
+    "async": "2.6.3",
     "babelify": "10.0.0",
     "backbone": "1.3.3",
     "backbone.localstorage": "2.0.2",
     "bignumber.js": "8.0.1",
     "bitcoinjs-lib": "4.0.2",
-    "browserify": "16.2.3",
+    "browserify": "16.5.0",
     "cordova": "git://github.com/apache/cordova-cli.git#1c8ca07f04b2f2a8b0477a0440904584fb01b76f",
     "cordova-android": "7.1.4",
     "cordova-android-support-gradle-release": "3.0.0",
