--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "bignumber.js": "8.0.1",
     "bitcoinjs-lib": "4.0.2",
     "browserify": "16.5.0",
-    "cordova": "git://github.com/apache/cordova-cli.git#1c8ca07f04b2f2a8b0477a0440904584fb01b76f",
+    "cordova": "9.0.0",
     "cordova-android": "7.1.4",
     "cordova-android-support-gradle-release": "3.0.0",
     "cordova-clipboard": "1.3.0",
@@ -69,13 +69,13 @@
     "core-js": "2.6.4",
     "cssnano": "4.1.7",
     "cz.blocshop.socketsforcordova": "https://github.com/chill117/sockets-for-cordova.git",
-    "handlebars": "4.1.2",
+    "handlebars": "4.5.3",
     "jquery": "3.4.1",
     "moment": "2.23.0",
     "open-sans-fontface": "https://github.com/samotari/open-sans/archive/1.4.2.tar.gz",
     "phonegap-plugin-barcodescanner": "8.0.1",
     "postcss-cli": "6.0.1",
-    "qrcode": "1.3.2",
+    "qrcode": "1.4.4",
     "sockets-for-cordova": "git+https://github.com/chill117/sockets-for-cordova.git",
     "uglify-js": "3.4.9",
     "underscore": "1.9.1"
