--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build:prod": "NODE_ENV=prod make clean-light prod",
     "build:test": "NODE_ENV=test make clean-light prod",
     "dev:android": "npm run build:dev && npm run build:apk:debug && npm run android:install",
+    "prod:android": "npm run build:prod && npm run build:apk:debug && npm run android:install",
     "prepare:android": "./node_modules/.bin/cordova platform add android",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
