--- a/package.json
+++ b/package.json
@@ -52,36 +52,36 @@
     }
   },
   "dependencies": {
-    "@babel/core": "7.6.0",
-    "@babel/polyfill": "7.6.0",
-    "@babel/preset-env": "7.6.0",
-    "async": "2.6.3",
+    "@babel/core": "7.9.0",
+    "@babel/polyfill": "7.8.7",
+    "@babel/preset-env": "7.9.0",
+    "async": "3.2.0",
     "babelify": "10.0.0",
-    "backbone": "1.3.3",
+    "backbone": "1.4.0",
     "backbone.localstorage": "2.0.2",
-    "bignumber.js": "8.0.1",
-    "bitcoinjs-lib": "4.0.2",
+    "bignumber.js": "9.0.0",
+    "bitcoinjs-lib": "5.1.7",
     "browserify": "16.5.0",
     "cordova": "9.0.0",
-    "cordova-android": "7.1.4",
-    "cordova-android-support-gradle-release": "3.0.0",
+    "cordova-android": "8.1.0",
+    "cordova-android-support-gradle-release": "3.0.1",
     "cordova-clipboard": "1.3.0",
-    "cordova-plugin-inappbrowser": "2.0.2",
-    "cordova-plugin-ionic-keyboard": "2.1.3",
+    "cordova-plugin-inappbrowser": "3.2.0",
+    "cordova-plugin-ionic-keyboard": "2.2.0",
     "cordova-plugin-network-information": "2.0.2",
-    "cordova-plugin-whitelist": "1.3.3",
-    "core-js": "2.6.4",
-    "cssnano": "4.1.7",
+    "cordova-plugin-whitelist": "1.3.4",
+    "core-js-bundle": "3.6.4",
+    "cssnano": "4.1.10",
     "cz.blocshop.socketsforcordova": "https://github.com/chill117/sockets-for-cordova.git",
-    "handlebars": "4.5.3",
+    "handlebars": "4.7.3",
     "jquery": "3.4.1",
-    "moment": "2.23.0",
+    "moment": "2.24.0",
     "open-sans-fontface": "https://github.com/samotari/open-sans/archive/1.4.2.tar.gz",
-    "phonegap-plugin-barcodescanner": "8.0.1",
-    "postcss-cli": "6.0.1",
+    "phonegap-plugin-barcodescanner": "8.1.0",
+    "postcss-cli": "7.1.0",
     "qrcode": "1.4.4",
     "sockets-for-cordova": "git+https://github.com/chill117/sockets-for-cordova.git",
-    "uglify-js": "3.4.9",
-    "underscore": "1.9.1"
+    "uglify-js": "3.8.0",
+    "underscore": "1.9.2"
   }
 }
