--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "name": "Charles Hill",
     "email": "chill@degreesofzero.com"
   },
-  "license": "AGPL-3.0",
+  "license": "GPL-3.0",
   "cordova": {
     "platforms": [
       "android"
