--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "moment": "2.29.1",
     "open-sans-fontface": "https://github.com/samotari/open-sans/archive/1.4.2.tar.gz",
     "phonegap-plugin-barcodescanner": "8.1.0",
+    "postcss": "8.2.6",
     "postcss-cli": "8.3.1",
     "puppeteer": "7.1.0",
     "qrcode": "1.4.4",
