--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "bignumber.js": "9.0.1",
     "bitcoinjs-lib": "5.2.0",
     "browserify": "17.0.0",
+    "browserslist": "4.16.3",
     "chai": "4.3.0",
     "cordova": "10.0.0",
     "cordova-android": "9.0.0",
