--- a/package.json
+++ b/package.json
@@ -56,8 +56,7 @@
         "ANDROID_SUPPORT_VERSION": "26.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-network-information": {},
-      "cordova-clipboard": {}
+      "cordova-plugin-network-information": {}
     }
   },
   "dependencies": {
@@ -76,7 +75,6 @@
     "cordova": "10.0.0",
     "cordova-android": "9.0.0",
     "cordova-android-support-gradle-release": "3.0.1",
-    "cordova-clipboard": "1.3.0",
     "cordova-plugin-inappbrowser": "5.0.0",
     "cordova-plugin-ionic-keyboard": "2.2.0",
     "cordova-plugin-network-information": "2.0.2",
@@ -86,7 +84,6 @@
     "express": "4.17.1",
     "handlebars": "4.7.7",
     "jquery": "3.5.1",
-    "mkdirp": "1.0.4",
     "mocha": "8.3.0",
     "open-sans-fontface": "https://github.com/samotari/open-sans/archive/1.4.2.tar.gz",
     "phonegap-plugin-barcodescanner": "8.1.0",
@@ -96,7 +93,6 @@
     "qrcode": "1.4.4",
     "serve-static": "1.14.1",
     "uglify-js": "3.12.8",
-    "underscore": "1.12.0",
-    "ws": "7.4.3"
+    "underscore": "1.12.0"
   }
 }
