--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "npm run build:prod",
     "build:apk": "./scripts/build-signed-apk.sh",
     "build:apk:debug": "./node_modules/.bin/cordova build android",
+    "build:clean": "make clean && npm run build",
     "build:dev": "NODE_ENV=dev make clean-light dev",
     "build:prod": "NODE_ENV=prod make clean-light prod",
     "build:test": "NODE_ENV=test make clean-light prod",
@@ -21,6 +22,8 @@
     "dev:android": "npm run build:dev && npm run build:apk:debug && npm run android:install",
     "prod:android": "npm run build:prod && npm run build:apk:debug && npm run android:install",
     "prepare:android": "./node_modules/.bin/cordova platform add android",
+    "release:fdroid": "./scripts/fdroid-release.sh",
+    "test:fdroid": "{ git fetch upstream && git checkout fdroid && gradle build --project-dir ./platforms/android; }; git checkout master",
     "test": "npm run test:unit ; npm run test:e2e",
     "test:e2e": "npm run build:test && ./node_modules/.bin/mocha test/e2e/ --timeout 5000 --recursive --reporter spec --ui bdd --exit",
     "test:unit": "npm run build:test && ./node_modules/.bin/mocha test/unit/ --timeout 5000 --recursive --reporter spec --ui bdd --exit"
